--- a/C1.html
+++ b/C1.html
@@ -44,6 +44,9 @@
             <li class="nav-item">
               <a class="nav-link active btn btn-outline-dark" aria-current="page" href="CONTACTENOS.html">CONTÁCTENOS</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=8624">PAGOS<img class="pse" src="img/pse.png" alt=""></a>
+            </li>
           </ul>
         </div>
       </div>
