--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <li class="nav-item">
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="CONTACTENOS.html">CONTÁCTENOS</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=8624">PAGOS<img class="pse" src="img/pse.png" alt=""></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -169,10 +172,7 @@
         <h4 class="card-title">Asesorias juridicas.</h4>
         <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">La licencia de conducción categoría B1 (carro particular) te permite manejar automóviles, 
-            motocarros, cuatrimotos, camperos, camionetas y microbuses de servicio particular (placa amarilla) 
-            tiene un costo total de $1.140.000 incluye todo el proceso de formación, exámenes médicos y la 
-            impresión de la licencia de conducción.
+          <p class="card-text">Asesoria y acompañamiento integral en asuntos contravencionales y de responsabilidad civil.
             </p>
           <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
