--- a/B1.html
+++ b/B1.html
@@ -56,7 +56,7 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/b1 INFO.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/b1.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
